Added mandatory fields to payment json
