# swagger/swagger.json
@@ -48,7 +48,7 @@
           "payment"
         ],
         "summary": "Creates a new payment.",
-        "operationId": "CreateHandler",
+        "operationId": "CreatePaymentHandler",
         "responses": {
           "200": {
             "description": "OK"
@@ -71,7 +71,7 @@
           "payment"
         ],
         "summary": "Reads one one payment by id.",
-        "operationId": "ReadOneHandler",
+        "operationId": "ReadOnePaymentHandler",
         "parameters": [
           {
             "type": "string",
@@ -97,29 +97,6 @@
         }
       }
     },
-    "/refund": {
-      "post": {
-        "produces": [
-          "application/json"
-        ],
-        "tags": [
-          "refund"
-        ],
-        "summary": "Creates a new refund.",
-        "operationId": "CreateHandler",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/refund/{id}": {
       "get": {
         "produces": [
@@ -128,8 +105,8 @@
         "tags": [
           "refund"
         ],
-        "summary": "Reads one one refund by id.",
-        "operationId": "ReadOneHandler",
+        "summary": "Reads one refund by id.",
+        "operationId": "ReadOneRefundHandler",
         "parameters": [
           {
             "type": "string",
@@ -148,6 +125,27 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "produces": [
+          "application/json"
+        ],
+        "tags": [
+          "refund"
+        ],
+        "summary": "Creates a new refund using reference to the original payment.",
+        "operationId": "CreateRefundHandler",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
